software-layer/k8s/apps/production/plex/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: &app plex
  name: *app
spec:
  rules:
    - host: plex.local.bcbrookman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  name: http
    - host: plex.bcbrookman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  name: http
